--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -30,8 +30,8 @@
       </li>
     </ul>
     <ul class="navbar-nav ml-auto d-flex align-items-center">
-      <li class="nav-item pl-3 ">
-        <a class="nav-link" href="#">Sair <i class="bi bi-arrow-bar-right"></i></a>
+      <li class="nav-item pl-3">
+        <a class="nav-link sair" href="#">Sair <i class="bi bi-arrow-bar-right"></i></a>
       </li>
     </ul>
   </div>
