--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -4,7 +4,20 @@
     <div class="col-md-6 mt-5 mb-5">
       <div class="row d-flex justify-content-center">
         <div class="col-md-10">
-          <h1 class="text-center mb-4">Cadastro</h1>
+
+
+          
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb breadcrumb-dot bg">
+              <li class="breadcrumb-item"><a class="text-dark" href="#">Home</a></li>
+              <li class="breadcrumb-item"><a class="text-dark" href="https://brazil.generation.org/">Generation</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Cadastro</li>
+            </ol>
+          </nav>
+
+
+
+          <h1 class="text-center mt-5 mb-4">Cadastro</h1>
           <div class="form-group">
             <label for="nome">Nome</label>
             <input class="form-control p-3 mb-2 bg-light" type="text" name="nome" id="nome"
@@ -40,7 +53,7 @@
 
             <div class="d-flex justify-content-center">
               <button type="submit" class="btn btn-danger m-4">Cancelar</button>
-              <button type="submit" class="btn btn-success m-4">Cadastrar</button>
+              <button type="submit" class="btn btn-outline-success m-4">Cadastrar</button>
             </div>
           </div>
         </div>
