rotas de entrar e cadastrar criadas

--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -6,7 +6,7 @@
         <div class="col-md-10">
 
 
-          
+
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb breadcrumb-dot bg">
               <li class="breadcrumb-item"><a class="text-dark" href="#">Home</a></li>
@@ -52,7 +52,7 @@
             </select>
 
             <div class="d-flex justify-content-center">
-              <button type="submit" class="btn btn-danger m-4">Cancelar</button>
+              <button type="submit" class="btn btn-danger m-4" routerLink="/entrar">Cancelar</button>
               <button type="submit" class="btn btn-outline-success m-4">Cadastrar</button>
             </div>
           </div>
