--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -1,9 +1,22 @@
-
-#bg{
-    background-image: url('https://i.imgur.com/wz1S4WP.jpg');
-    min-height: 850px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+#bg {
+  background-image: url("https://i.imgur.com/wz1S4WP.jpg");
+  min-height: 950px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
+
+/* .breadcrumb-dot .breadcrumb-item + .breadcrumb-item::before {
+  content: "•";
+  color: black;
+}
+
+.bg {
+  background-color: ghostwhite;
+}
+
+.active {
+  color: black;
+  font-weight: bold;
+} */
