--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -2,12 +2,20 @@
   <div class="row d-flex align-items-center">
     <div class="col-md-6">
 
+      <!-- <nav aria-label="breadcrumb">
+        <ol class="breadcrumb breadcrumb-dot bg">
+          <li class="breadcrumb-item active" aria-current="page">Home</li>
+          <li class="breadcrumb-item"><a class="text-dark" href="https://brazil.generation.org/">Generation</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Cadastro</li>
+        </ol>
+      </nav> -->
+
       <div class="row d-flex justify-content-center">
 
         <div class="col-md-6">
 
-          <h1 class="text-center mb-5">Entrar<i class="bi bi-cursor"></i></h1>
-          
+          <h1 class="text-center mt-5 mb-5">Entrar<i class="bi bi-cursor"></i></h1>
+
           <div class="form-group">
 
             <label for="usuario">Usuário</label>
@@ -26,7 +34,7 @@
           </div>
 
           <hr class="mt-5 mb-5">
-          <p class="text-center"> Não tem uma conta? <a href="">Cadastre-se</a></p>
+          <p class="text-center"> Não tem uma conta? <a routerLink="/cadastrar">Cadastre-se</a></p>
         </div>
 
       </div>
