Consumo de API - Login e Cadastro

--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -19,18 +19,18 @@
           <div class="form-group">
 
             <label for="usuario">Usuário</label>
-            <input class="form-control p-3 mb-2 bg-light" type="text" name="
+            <input [(ngModel)]='userLogin.usuario' class="form-control p-3 mb-2 bg-light" type="text" name="
                         usuario" id="usuario" placeholder="Digite seu usuário">
           </div>
 
           <div class="form-group">
             <label for="senha">Senha</label>
-            <input class="form-control p-3 mb-2 bg-light" type="password" name="
+            <input [(ngModel)]='userLogin.senha' class="form-control p-3 mb-2 bg-light" type="password" name="
                         senha" id="senha" placeholder="Digite sua senha">
           </div>
 
           <div class="d-flex justify-content-center mt-4">
-            <button type="submit" class="btn btn-success">Entrar</button>
+            <button type="submit" class="btn btn-success" (click)='entrar()'>Entrar</button>
           </div>
 
           <hr class="mt-5 mb-5">
