--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -18,34 +18,35 @@
 
 
           <h1 class="text-center mt-5 mb-4">Cadastro</h1>
+
           <div class="form-group">
             <label for="nome">Nome</label>
-            <input class="form-control p-3 mb-2 bg-light" type="text" name="nome" id="nome"
+            <input [(ngModel)]='user.nome' class="form-control p-3 mb-2 bg-light" type="text" name="nome" id="nome"
               placeholder="Digite seu nome">
           </div>
           <div class="form-group">
             <label for="usuario">Usuário</label>
-            <input class="form-control p-3 mb-2 bg-light" type="text" name="usuario" id="usuario"
+            <input [(ngModel)]='user.usuario' class="form-control p-3 mb-2 bg-light" type="text" name="usuario" id="usuario"
               placeholder="Digite seu usuário">
           </div>
           <div class="form-group">
             <label for="foto">Foto</label>
-            <input class="form-control p-3 mb-2 bg-light" type="text" name="foto" id="foto"
+            <input [(ngModel)]='user.foto' class="form-control p-3 mb-2 bg-light" type="text" name="foto" id="foto"
               placeholder="Link da sua foto">
           </div>
           <div class="form-group">
             <label for="senha">Senha</label>
-            <input class="form-control p-3 mb-2 bg-light" type="password" name="senha" id="senha"
+            <input (input)='confirmSenha($event)' class="form-control p-3 mb-2 bg-light" type="password" name="senha" id="senha"
               placeholder="Digite sua senha">
           </div>
           <div class="form-group">
             <label for="senha">Confirmar Senha</label>
-            <input class="form-control p-3 mb-2 bg-light" type="password" name="confirmSenha" id="confirmSenha"
+            <input [(ngModel)]='user.senha' class="form-control p-3 mb-2 bg-light" type="password" name="confirmSenha" id="confirmSenha"
               placeholder="Confirme sua senha">
           </div>
           <div class="form-group">
             <label for="tipo">Tipo de Usuário</label>
-            <select class="form-control" name="tipo" id="tipo">
+            <select class="form-control" name="tipo" id="tipo" (change)='tipoUser($event)'>
               <option>Selecione um tipo de usuário:</option>
               <option value="normal">Normal</option>
               <option value="adm">Administrador</option>
@@ -53,7 +54,7 @@
 
             <div class="d-flex justify-content-center">
               <button type="submit" class="btn btn-danger m-4" routerLink="/entrar">Cancelar</button>
-              <button type="submit" class="btn btn-outline-success m-4">Cadastrar</button>
+              <button type="submit" class="btn btn-outline-success m-4" (click)='cadastrar()' >Cadastrar</button>
             </div>
           </div>
         </div>
