--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
+<app-menu></app-menu>
+
+<app-inicio></app-inicio>
+
+<app-rodape></app-rodape>
+<!-- 
+<app-menu *ngIf='auth.logado()'></app-menu>
+
 <router-outlet></router-outlet>
+
+<app-rodape *ngIf='auth.logado()'></app-rodape> -->
