--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Snippet&display=swap');
+
+html {
+  font-family: 'Snippet', sans-serif;
+}
+
 #bg {
   background-image: url('https://i.imgur.com/GQyuZjC.jpg');
   min-height: 850px;
@@ -11,11 +17,61 @@
   color: black;
 }
 
-.bg{
-    background-color: ghostwhite;
+.bg {
+  background-color: ghostwhite;
 }
 
-.active{
-    color: black;
-    font-weight: bold;
+.active {
+  color: black;
+  font-weight: bold;
+}
+
+
+
+
+/* botao */
+
+.buttons {
+  margin: 10%;
+  text-align: center;
+}
+
+.btn-hover {
+  width: 150px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
+  margin: 20px;
+  height: 45px;
+  text-align: center;
+  border: none;
+  background-size: 300% 100%;
+
+  border-radius: 10px;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+
+.btn-hover:hover {
+  background-position: 100% 0;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.btn-hover:focus {
+  outline: none;
+}
+
+.btn-hover.color-5 {
+  background-image: linear-gradient(to right, #0ba360, #3cba92, #30dd8a, #2bb673);
+  box-shadow: 0 4px 15px 0 rgba(23, 168, 108, 0.75);
+}
+
+.btn-hover.color-2 {
+  background-image: linear-gradient(to right, #eeb722, #e43603, #d30909, #a73704e3);
+  box-shadow: 0 4px 15px 0 rgba(229, 66, 10, 0.75);
 }
