--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -1,3 +1,5 @@
+<html>
+  
 <div class="container-fluid">
   <div class="row d-flex align-items-center">
     <div class="col-md-6">
@@ -14,7 +16,7 @@
 
         <div class="col-md-6">
 
-          <h1 class="text-center mt-5 mb-5">Entrar<i class="bi bi-cursor"></i></h1>
+          <h1 class="text-center mt-5 mb-5">Entrar <i class="bi bi-cursor"></i></h1>
 
           <div class="form-group">
 
@@ -42,3 +44,5 @@
     <div class="col-md-6" id="bg"></div>
   </div>
 </div>
+
+</html>
