--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
   <a class="navbar-brand" href="#">
-    <img src="https://i.imgur.com/iRuz1Pi.jpg" alt="profile picture" width="80" height="40" class="img-fluid rounded">
+    <img src="{{foto}}" alt="profile picture" width="80" height="40" class="img-fluid rounded">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
     aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
@@ -9,29 +9,24 @@
   <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
     <ul class="navbar-nav mr-auto d-flex align-items-center">
       <li class="nav-item pl-2">
-        <p class="m-0 font-weight-light text-warning" href="#">Nome do Usuário</p>
+        <p class="m-0 font-weight-light c-purple">Olá, {{nome}}</p>
       </li>
       <li class="nav-item pl-3">
-        <a href="">
-          <p class="m-0 text-white"><i class="bi bi-pencil-square"></i></p>
-        </a>
+        <a class="nav-link nav" href="#">Home</a>
       </li>
       <li class="nav-item pl-3">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link nav" href="#">Blog</a>
       </li>
       <li class="nav-item pl-3">
-        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link nav" href="https://brazil.generation.org/">Contato</a>
       </li>
       <li class="nav-item pl-3">
-        <a class="nav-link" href="https://brazil.generation.org/">Contato</a>
-      </li>
-      <li class="nav-item pl-3">
-        <a class="nav-link" href="#">Sobre</a>
+        <a class="nav-link nav" href="#">Sobre</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto d-flex align-items-center">
       <li class="nav-item pl-3">
-        <a class="nav-link sair" href="#">Sair <i class="bi bi-arrow-bar-right"></i></a>
+        <a (click)='sair()' class="nav-link sair" href="#">Sair <i class="bi bi-arrow-bar-right"></i></a>
       </li>
     </ul>
   </div>
