--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,30 +1,35 @@
 <footer class="page-footer font-small bg-dark pt-4">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 d-flex justify-content-center">
-                <h4>Me acompanhe nas redes sociais</h4>
-            </div>
-        </div>
-    </div>
-
+  <div class="container">
     <div class="row">
-        <div class="col-md-12 d-flex justify-content-center">
-            <ul class="social-network">
-                <li>
-                    <a href="https://www.linkedin.com/in/amorimandy/" target="_blank" class="icoLinkedin"><i class="bi bi-linkedin"></i></a>
-                </li>
-                <li>
-                    <a href="https://github.com/amorimandy" target="_blank" class="icoGithub"><i class="bi bi-github"></i></a>
-                </li>
-                <li>
-                    <a href="mailto:dev.andymal@gmail.com" target="_blank" class="icoGmail"><i class="bi bi-envelope-fill"></i></a>
-                </li>
-            </ul>
-        </div>
+      <div class="col-md-12 d-flex justify-content-center">
+        <h4>Me acompanhe nas redes sociais</h4>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12 d-flex justify-content-center">
+      <ul class="social-network">
+        <li>
+          <a href="https://www.linkedin.com/in/amorimandy/" target="_blank" class="icoLinkedin"><i
+              class="bi bi-linkedin"></i></a>
+        </li>
+        <li>
+          <a href="https://github.com/amorimandy" target="_blank" class="icoGithub"><i class="bi bi-github"></i></a>
+        </li>
+        <li>
+          <a href="mailto:dev.andymal@gmail.com" target="_blank" class="icoGmail"><i
+              class="bi bi-envelope-fill"></i></a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="col-md-12">
+    <div class="footer-copyright text-center p-2 d-flex align-items-center">
+      <div class="col-md-12">
+        <span> &copy; 2021 Copyright: Andressa Amorim</span>
+      </div>
     </div>
 
-    <div class="footer-copyright bg-secondary text-center py-2">
-        <span> &copy; 2020 Copyright: Andressa Amorim</span>
-    </div>
-
+  </div>
 </footer>
