--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,15 @@
 
 <app-inicio></app-inicio>
 
-<app-rodape></app-rodape>
-<!-- 
-<app-menu *ngIf='auth.logado()'></app-menu>
+
+
+<!-- <app-menu *ngIf='auth.logado()'></app-menu>
 
 <router-outlet></router-outlet>
 
 <app-rodape *ngIf='auth.logado()'></app-rodape> -->
+
+
+<app-tema></app-tema>
+
+<app-rodape></app-rodape>
